compiling_error.txt
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp: In function 'int main()':
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp:64:5: error: 'String' was not declared in this scope
     String word;
     ^~~~~~
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp:64:5: note: suggested alternative: 'trunc'
     String word;
     ^~~~~~
     trunc
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp:66:16: error: 'word' was not declared in this scope
         cin >> word;
                ^~~~
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp:66:16: note: suggested alternative: 'void'
         cin >> word;
                ^~~~
                void
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp:71:12: error: 'word' was not declared in this scope
     }while(word != "exit");
            ^~~~
C:\Users\Hariadi Adha F\Documents\GitHub\SPOK-Checker\main.cpp:71:12: note: suggested alternative: 'void'
     }while(word != "exit");
            ^~~~
            void
